--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,11 @@
             <scope>runtime</scope>
             <version>8.2.0</version>
         </dependency>
+        <dependency> 
+            <groupId>org.postgresql</groupId> 
+            <artifactId>postgresql</artifactId> 
+            <scope>runtime</scope> 
+        </dependency>
         <dependency>
             <groupId>com.openhtmltopdf</groupId>
             <artifactId>openhtmltopdf-pdfbox</artifactId>
