--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port =10001
+spring.profiles.active=dev
 #config base de donneee
 spring.datasource.url=jdbc:mysql://localhost:3307/santeado_db?autoReconnect=true&useSSL=false&createDatabaseIfNotExist=true
 spring.datasource.username=root
