--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -7,6 +7,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=false
 spring.session.store-type=jdbc
+spring.session.jdbc.initialize-schema=always
 
 # JWT
 jwt.secret=${JWT_SECRET}
