--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -8,6 +8,8 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=false
 spring.session.store-type=jdbc
 spring.session.jdbc.initialize-schema=always
+logging.level.root=INFO
+
 
 # JWT
 jwt.secret=${JWT_SECRET}
